--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@simplewebauthn/server": "^9.0.3",
+    "@types/next-auth": "^3.15.0",
     "@vercel/kv": "^1.0.1",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.274.0",
+    "mongodb": "^6.16.0",
     "next": "latest",
-    "next-auth": "beta",
+    "next-auth": "^5.0.0-beta.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.6",
@@ -41,6 +46,7 @@
     "unstorage": "^1.10.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.12.8",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
